--- a/styles/general.css
+++ b/styles/general.css
@@ -18,6 +18,7 @@ body {
   flex-direction: column;  
   justify-content: flex-end;
   align-items: center;
+  max-width: 450px;
   width:100%;
   height:100dvh; /* make main fill full screen */
   }
