--- a/styles/logo.css
+++ b/styles/logo.css
@@ -1,7 +1,6 @@
 .logo {
   display:flex;
-  flex-direction: column;  
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   width:100%;
   height: 20dvh;
