--- a/styles/keyboard.css
+++ b/styles/keyboard.css
@@ -33,7 +33,7 @@
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   gap: 5px;
   padding-bottom: 4px;
