--- a/styles/logo.css
+++ b/styles/logo.css
@@ -1,7 +1,13 @@
 .logo {
   display:flex;
+  flex-direction: column;  
   justify-content: center;
   align-items: center;
   width:100%;
   height: 20dvh;
   }
+
+.lingo-logo {
+  max-width:250px;
+  height:auto;
+}
