--- a/styles/general.css
+++ b/styles/general.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   overflow: hidden; /* prevent scrolling */
 }
 
