--- a/styles/play.css
+++ b/styles/play.css
@@ -17,6 +17,7 @@
 }
 
 #newgame:hover {
+  background-color: rgb(209, 149, 36);
   cursor: pointer;
 }
 
@@ -41,7 +42,6 @@
   display:flex;
   justify-content: center;
   align-items: center;
-  color: rgb(3, 49, 148);
   font-size: clamp(25px, 85%, 45px);
   font-weight: bolder;
 }
